fixtures/semantic/invalid/recovery/broken-attribute.php
<?php
#[Prompt33Attribute(]
function prompt33_broken_attribute(): void {}
